# omok

./: .gitignore  CLAUDE.md  README.md  main.py  play_jax.py  pyproject.toml  train_colab.ipynb  train_colab.py  train_colab_tpu.ipynb  train_colab_tpu.py  train_history.md
docs/: ARCHITECTURE.md
game/: __init__.py  board.py
mcts/: __init__.py  search.py
model/: __init__.py  history_jax.pkl  network.py
training/: __init__.py  self_play.py  trainer.py
