[project]
name = "omok"
version = "0.1.0"
description = "AlphaZero-style Omok (Gomoku) AI with CLI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy",
    "tqdm",
]

[tool.setuptools]
# 설치할 패키지 폴더들을 직접 지정합니다.
packages = ["game", "mcts", "model", "training"]

[project.optional-dependencies]
jax = [
    "jax",
    "jaxlib",
    "flax",
]

[tool.uv]
dev-dependencies = [
    "jupytext>=1.18.1",
]
